# Houdini_MPM_Codimensional

./: .gitignore  CMakeLists.txt  MPM_Codimensional.hip  README.md
MPMCOD/: CMakeLists.txt  HoudiniCommonInit.cpp  HoudiniMain.cpp  HoudiniMain.h
MPMCOD/ModelDER/: Definitions.h  StrandForce.cpp  StrandForce.h
MPMCOD/ModelDER/Dependencies/: ElasticStrandUtils.cpp
MPMCOD/ModelDER/Forces/: BendingForce.cpp  StretchingForce.cpp  TwistingForce.cpp  ViscousOrNotViscous.h
MPMCOD/ModelThinShell/: ThinShellForce.cpp  ThinShellForce.h
MPMCOD/ModelThinShell/Forces/: ShellBendingForce.cpp  ShellBendingForce.h  ShellMembraneForce.cpp  ShellMembraneForce.h
MPMCOD/SolidForce/: AttachForce.cpp  AttachForce.h  CohesionForce.cpp  CohesionForce.h  Force.cpp  Force.h  JunctionForce.cpp  JunctionForce.h  LevelSetForce.cpp  LevelSetForce.h  SimpleGravityForce.cpp  SimpleGravityForce.h  SpringForce.cpp  SpringForce.h
MPMCOD/Solver/: LinearizedImplicitEuler.cpp  LinearizedImplicitEuler.h  SIMCore.cpp  SIMCore.h  SIMManager.cpp  SIMManager.h  SceneStepper.cpp  SceneStepper.h
MPMCOD/Utils/: Array1.h  Array2Utils.h  Array3Utils.h  DistanceFields.cpp  DistanceFields.h  ElasticParameters.h  Icosphere.cpp  Icosphere.h  MathDefs.h  Script.cpp  Script.h  SolidMesh.h  Sorter.cpp  Sorter.h  ThreadUtils.h
backup/: MPM_Codimensional_bak1.hip  MPM_Codimensional_bak10.hip  MPM_Codimensional_bak100.hip  MPM_Codimensional_bak101.hip  MPM_Codimensional_bak102.hip  MPM_Codimensional_bak103.hip  MPM_Codimensional_bak11.hip  MPM_Codimensional_bak12.hip  MPM_Codimensional_bak13.hip  MPM_Codimensional_bak14.hip  MPM_Codimensional_bak15.hip  MPM_Codimensional_bak16.hip  MPM_Codimensional_bak17.hip  MPM_Codimensional_bak18.hip  MPM_Codimensional_bak19.hip  MPM_Codimensional_bak2.hip  MPM_Codimensional_bak20.hip  MPM_Codimensional_bak21.hip  MPM_Codimensional_bak22.hip  MPM_Codimensional_bak23.hip  MPM_Codimensional_bak24.hip  MPM_Codimensional_bak25.hip  MPM_Codimensional_bak26.hip  MPM_Codimensional_bak27.hip  MPM_Codimensional_bak28.hip  MPM_Codimensional_bak29.hip  MPM_Codimensional_bak3.hip  MPM_Codimensional_bak30.hip  MPM_Codimensional_bak31.hip  MPM_Codimensional_bak32.hip  MPM_Codimensional_bak33.hip  MPM_Codimensional_bak34.hip  MPM_Codimensional_bak35.hip  MPM_Codimensional_bak36.hip  MPM_Codimensional_bak37.hip  (+64 more)
(+48 files in other folders)
